--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sherrylinks/sdk": "^2.28.24-beta.1",
     "@tanstack/react-query": "^5.61.0",
     "canvas": "^3.1.2",
     "lottie-react": "^2.4.1",
